# gbr_d

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  create_project_structure.py  modules.md  pipline.md
src/: CMakeLists.txt  gbr_daemon.cpp  gbr_daemon.h  main.cpp
src/config/: gbr_d.conf
src/utils/: CMakeLists.txt  config_parser.cpp  config_parser.h
